syntax="proto3";

package notes;

import "google/protobuf/timestamp.proto";

service Notes {
  rpc CreateNote(Note) returns (Note);
  rpc DeleteNote(Note) returns (Note);
  rpc UpdateNote(Note) returns (Note);
  rpc GetNotes(Query) returns (NoteList); 
}

message Query {
  repeated string IDs = 1;
  string title = 2;
  string team = 3;
  repeated string authors = 4;
  google.protobuf.Timestamp todate = 5;
  google.protobuf.Timestamp fromdate = 6;
  repeated string tags = 7;
}

message NoteList {
  repeated Note notes = 1;
}

message Tag {
  string text = 1;
  string color = 2;
}

message Note {
  string id = 1;
  string title = 2;
  string author = 3;
  string team = 4;
  string body = 5;
  string type = 6;
  google.protobuf.Timestamp dateCreated = 7;
  google.protobuf.Timestamp dateModified = 8;
  string link = 9;
  bytes image = 10;
  repeated Tag tags = 11;
  float score = 12;
}

message Empty {

}